[gd_scene load_steps=23 format=3 uid="uid://dukoxvav2kgvr"]

[ext_resource type="Script" uid="uid://bxd7x2f1yffh0" path="res://Assets/Components/HealthPickup/health_pickup.gd" id="1_bukqh"]
[ext_resource type="AudioStream" uid="uid://corpecsgmxoi4" path="res://Assets/Sound/BattleSFX/HealingByDylanKelk(MIXED).wav" id="2_bukqh"]
[ext_resource type="Texture2D" uid="uid://gemf0qgv7hrx" path="res://Assets/Player/shadow.png" id="3_bukqh"]
[ext_resource type="AudioStream" uid="uid://dkw5jngk0c85u" path="res://Assets/Sound/BattleSFX/heal.wav" id="5_ujaso"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_n05nb"]
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_lxajw"]
radius = 1.191

[sub_resource type="Shader" id="Shader_lxajw"]
code = "shader_type canvas_item;

uniform float hit_effect : hint_range(0,1) = 0.0;
uniform float shake_intensity = 10.0;
uniform float flash_speed = 30.0;
uniform vec4 flash_color : source_color = vec4(1.0, 0.0, 0.0, 1.0);

float rand(vec2 co) {
    return fract(sin(dot(co, vec2(12.9898,78.233))) * 43758.5453);
}

void vertex() {
    if (hit_effect > 0.0) {
        float time = TIME * 30.0;
        vec2 random_offset = vec2(
            rand(vec2(time, 0.0)) * 2.0 - 1.0,
            rand(vec2(time, 10.0)) * 2.0 - 1.0
        );
        VERTEX += random_offset * shake_intensity * hit_effect;
    }
}

void fragment() {
    vec4 original_color = texture(TEXTURE, UV);

    if (hit_effect > 0.0) {
        float flash = sin(TIME * flash_speed) * 0.5 + 0.5;
        flash *= original_color.a;

        vec4 final_color = mix(original_color, flash_color, flash);
        final_color = mix(original_color, final_color, hit_effect);
        final_color.a = original_color.a;

        COLOR = final_color;
    } else {
        COLOR = original_color;
    }
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bukqh"]
shader = SubResource("Shader_lxajw")
shader_parameter/hit_effect = 0.0
shader_parameter/shake_intensity = 4.0
shader_parameter/flash_speed = 30.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ujaso"]
load_path = "res://.godot/imported/HealthPickup.png-69d877a43a8cc51c440b77180259b671.ctex"

[sub_resource type="Animation" id="Animation_f36e0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x02hr"]
resource_name = "play"
length = 0.4185
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u7hj6"]
_data = {
&"RESET": SubResource("Animation_f36e0"),
&"play": SubResource("Animation_x02hr")
}

[sub_resource type="Animation" id="Animation_bukqh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/hit_effect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ncaab"]
resource_name = "blink"
length = 1.499
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.266667, 0.6, 0.666667, 0.799361, 0.866667, 0.993065, 1.06667, 1.16284, 1.23028, 1.28843, 1.33727, 1.38843),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.46813),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"delete"
}]
}

[sub_resource type="Animation" id="Animation_lxajw"]
resource_name = "pulse"
length = 0.6075
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.533333),
"transitions": PackedFloat32Array(0.267944, 3.73213, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/hit_effect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.199942, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.318, 0.0]
}

[sub_resource type="Animation" id="Animation_rmopc"]
resource_name = "squish"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0414809, 0.178793),
"transitions": PackedFloat32Array(0.0915056, 1.68179, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.405, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.187741),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pulse"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ncaab"]
_data = {
&"RESET": SubResource("Animation_bukqh"),
&"blink": SubResource("Animation_ncaab"),
&"pulse": SubResource("Animation_lxajw"),
&"squish": SubResource("Animation_rmopc")
}

[sub_resource type="Animation" id="Animation_ujaso"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_effect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/shake_intensity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.0]
}

[sub_resource type="Animation" id="Animation_n05nb"]
resource_name = "shake"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_effect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.53333),
"transitions": PackedFloat32Array(0.535887, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/shake_intensity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 4.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmopc"]
_data = {
&"RESET": SubResource("Animation_ujaso"),
&"shake": SubResource("Animation_n05nb")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_bukqh"]
viewport_path = NodePath("SubViewport")

[sub_resource type="SphereShape3D" id="SphereShape3D_bukqh"]
radius = 2.95473

[node name="HealthPickup" type="RigidBody3D"]
collision_layer = 8
physics_material_override = SubResource("PhysicsMaterial_n05nb")
gravity_scale = 4.0
script = ExtResource("1_bukqh")
heal_sfx = ExtResource("2_bukqh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_lxajw")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ujaso")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(337, 292)

[node name="HealthPickup" type="Node2D" parent="SubViewport"]
position = Vector2(155, 157)
scale = Vector2(10, 10)

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/HealthPickup"]
material = SubResource("ShaderMaterial_bukqh")
texture = SubResource("CompressedTexture2D_ujaso")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewport/HealthPickup/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_u7hj6")
}
autoplay = "play"
speed_scale = 1.794
movie_quit_on_finish = true

[node name="pulse" type="AnimationPlayer" parent="SubViewport/HealthPickup"]
libraries = {
&"": SubResource("AnimationLibrary_ncaab")
}

[node name="shake" type="AnimationPlayer" parent="SubViewport/HealthPickup"]
libraries = {
&"": SubResource("AnimationLibrary_rmopc")
}

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.12, 0.16, -0.135)
billboard = 1
texture_filter = 0
texture = SubResource("ViewportTexture_bukqh")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 256
collision_mask = 288

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_bukqh")
debug_color = Color(0.938663, 0.15773, 0.483728, 0.42)

[node name="Shadow" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(10, 0, 0, 0, -0.697564, -9.97564, 0, 9.97564, -0.697564, 0, 0, 0)
top_level = true
texture_filter = 0
texture = ExtResource("3_bukqh")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
